Consolidate `module05` code structure: Relocate source and header files into organized `sources` and `includes` directories.

--- a/module06/ex01/Makefile
+++ b/module06/ex01/Makefile
@@ -1,10 +1,10 @@
-NAME		= ./bureaucrat
+NAME		= ./serializer
 
 CC			= c++
 
 CFLAGS		= -Wall -Wextra -Werror -Wunreachable-code -std=c++98
 
-FILES		= main Bureaucrat AForm ShrubberyCreationForm RobotomyRequestForm PresidentialPardonForm Intern
+FILES		= main Serializer
 
 SRC_DIR 	= sources/
 
