--- a/module05/ex02/Makefile
+++ b/module05/ex02/Makefile
@@ -1,14 +1,36 @@
-NAME = ex02
-CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
-SRC = main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp RobotomyRequestForm.cpp PresidentialPardonForm.cpp
-OBJ = $(SRC:.cpp=.o)
+NAME		= ./bureaucrat
+
+CC			= c++
+
+CFLAGS		= -Wall -Wextra -Werror -Wunreachable-code -std=c++98
+
+FILES		= main Bureaucrat AForm ShrubberyCreationForm RobotomyRequestForm PresidentialPardonForm
+
+SRC_DIR 	= sources/
+
+SRC_FILES	= $(addprefix $(SRC_DIR), $(addsuffix .cpp, $(FILES)))
+
+OBJ_DIR		= objects/
+
+OBJ_FILES	= $(addprefix $(OBJ_DIR), $(addsuffix .o, $(FILES)))
+
+INCLUDES	= -I ./includes/
 
 all: $(NAME)
-$(NAME): $(OBJ)
-	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJ)
 
-clean:; rm -f $(OBJ)
-fclean: clean; rm -f $(NAME)
+$(NAME): $(OBJ_FILES)
+	$(CC) $(CFLAGS) $(INCLUDES) $(OBJ_FILES) -o $@
+
+$(OBJ_DIR)%.o:$(SRC_DIR)%.cpp
+	mkdir -p $(dir $@)
+	$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
+
+clean:
+	rm -rf $(OBJ_DIR)
+
+fclean: clean
+	rm -f $(NAME)
+
 re: fclean all
+
 .PHONY: all clean fclean re
