--- a/module06/ex00/Makefile
+++ b/module06/ex00/Makefile
@@ -1,10 +1,10 @@
-NAME		= ./bureaucrat
+NAME		= ./convert
 
 CC			= c++
 
 CFLAGS		= -Wall -Wextra -Werror -Wunreachable-code -std=c++98
 
-FILES		= main Bureaucrat AForm ShrubberyCreationForm RobotomyRequestForm PresidentialPardonForm Intern
+FILES		= main ScalarConverter
 
 SRC_DIR 	= sources/
 
